Agregue animaciones al nav

--- a/index.html
+++ b/index.html
@@ -17,36 +17,35 @@
             <picture >
                 <source media="(max-width:500px)" srcset="images/logo-mobile.png">
                 <source media="(max-width:1024px)" srcset="images/logo-tablet.png">
-                <source media="(max-width:1800px)" srcset="images/logo.png">
                 <img class="logo" src="./images/logo.png" alt="Logo">
             </picture>
             <picture>
                 <source media="(max-width: 500px)" srcset="images/vaniHome-mobile.png">
                 <source media="(max-width: 1024px)" srcset="images/vaniHome-tablet.png">
-                <source media="(max-width: 1024px)" srcset="images/vaniHome.png">
                 <img class="vaniHome" src="./images/vaniHome.png" >
             </picture>
         </header>
 
         <nav class="navHome">
+            <div class="inicio">
             <ul class="inicio">
                 <li>
-                    <a class="home" href="./index.html">Home</a>
+                    <div class="home"><a class="home" href="./index.html">Home</a></div>
                 </li>
                 <li>
-                    <a class="cursos" href="./section/cursos.html">Cursos</a>
+                    <div class="cursos"><a class="cursos" href="./section/cursos.html">Cursos</a></div>
                 </li>
                 <li>
-                    <a class="alma" href="./section/almalider.html">Alma Lider</a>
+                    <div class="alma"><a class="alma" href="./section/almalider.html">Alma Lider</a></div>
                 </li>
                 <li>
-                    <a class="mentoria" href="./section/mentorias.html">Mentorias</a>
+                    <div class="mentoria"><a class="mentoria" href="./section/mentorias.html">Mentorias</a></div>
                 </li>
                 <li>
-                    <a class="escuela" href="./section/escuela.html">Escuela</a>
+                    <div class="escuela"><a class="escuela" href="./section/escuela.html">Escuela</a></div>
                 </li>
             </ul>
-
+            </div>
         </nav>
 
         <div class="divHome1">
@@ -59,7 +58,7 @@
                 <source media="(max-width: 500px )" srcset="images/vanihome2-mobile.png">
                 <source media="(max-width:1024px)" srcset="images/vanihome2-tablet.png">
                 <source media="(max-width:1800px)" srcset="images/vanihome2.png">
-                <img class="imagenPresentacion" src="./images/vanihome 2.png" alt="presentacionVaniBrand">
+                <img class="imagenPresentacion" src="./images/vanihome2.png" alt="presentacionVaniBrand">
             </picture>
                 <p class="intro">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vel deleniti optio assumenda architecto
@@ -76,6 +75,7 @@
                 <picture>
                     <source media="(max-width: 500px )" srcset="images/baseDeDatosInicio-mobile.png">
                     <source media="(max-width: 1024px )" srcset="images/baseDeDatosInicio-tablet.png">
+                    <source media="(max-width: 1024px )" srcset="images/baseDeDatosInicio.png">
                     <img src="./images/baseDeDatosInicio.png" alt="Base de Datos">
                 </picture>
                     <p>Base de Datos Power</p>
@@ -85,6 +85,7 @@
                 <picture>
                     <source media="(max-width: 500px )" srcset="images/empAEmp2Inicio-mobile.png">
                     <source media="(max-width: 1024px )" srcset="images/empAEmp2Inicio-tablet.png">
+                    <source media="(max-width: 1024px )" srcset="images/empAEmp2Inicio.png">
                     <img src="./images/empAEmp2Inicio.png" alt="Emprendedora a Emoresaria II">
                 </picture>
                     <p>Emprendedora a Emoresaria II</p>
@@ -94,6 +95,7 @@
                 <picture>
                     <source media="(max-width: 500px )" srcset="images/llevaTuNegocioInicio-mobile.png">
                     <source media="(max-width: 1024px )" srcset="images/llevaTuNegocioInicio-tablet.png">
+                    <source media="(max-width: 1024px )" srcset="images/llevaTuNegocioInicio.png">
                     <img src="./images/llevaTuNegocioInicio.png" alt="Lleva Tu Negocio al Proximo Nivel">
                 </picture>
                     <p>Lleva Tu Negocio Al Proximo Nivel</p>
