--- a/section/mentorias.html
+++ b/section/mentorias.html
@@ -28,19 +28,19 @@
             <!-- listas -->
                 <ul class="inicio">
                     <li>
-                        <a href="../index.html">Home</a>
+                        <div class="home"><a class="home" href="../index.html">Home</a></div>
                     </li>
                     <li>
-                        <a href="cursos.html">Cursos</a>
+                        <div class="cursos"><a class="cursos" href="cursos.html">Cursos</a></div>
                     </li>
                     <li>
-                        <a href="almalider.html">Alma Lider</a>
-                    </li>
-                    <li   li>
-                        <a href="mentorias.html">Mentorias</a>
+                        <div class="alma"><a class="alma" href="almalider.html">Alma Lider</a></div>
                     </li>
                     <li>
-                        <a href="escuela.html">Escuela</a>
+                        <div class="mentoria"><a class="mentoria" href="mentorias.html">Mentorias</a></div>
+                    </li>
+                    <li>
+                        <div class="escuela"><a class="escuela" href="escuela.html">Escuela</a></div>
                     </li>
                 </ul>
     </nav>
