--- a/section/almalider.html
+++ b/section/almalider.html
@@ -24,26 +24,31 @@
                 <img src="../images/vanialmalider.png" alt="banneralmalider">
             </picture>
         </header>
-        <nav class="navAlma">
-        <!-- listas -->
-                <ul class="inicio">
-                    <li>
-                        <div class="home"><a class="home" href="../index.html">Home</a></div>
-                    </li>
-                    <li>
-                        <div class="cursos"><a class="cursos" href="cursos.html">Cursos</a></div>
-                    </li>
-                    <li>
-                        <div class="alma"><a class="alma" href="almalider.html">Alma Lider</a></div>
-                    </li>
-                    <li>
-                        <div class="mentoria"><a class="mentoria" href="mentorias.html">Mentorias</a></div>
-                    </li>
-                    <li>
-                        <div class="escuela"><a class="escuela" href="escuela.html">Escuela</a></div>
-                    </li>
-                </ul>
-            </nav>
+        <nav class="navbar navbar-expand-lg navbar-dark navColor">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="cursos.html">Cursos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="almalider.html">Alma Lider</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="mentorias.html">Mentorias</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="escuela.html">Escuela</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </nav>
         <div class="titulo">
             <!-- texto, link directo a la pagina de Alma e imagen -->
             <h1>Alma Lider</h1>
