--- a/section/cursos.html
+++ b/section/cursos.html
@@ -27,26 +27,31 @@
         </header>
 
 
-    <nav class="navHome">
-            <!-- listas -->
-            <ul class="inicio">
-                <li>
-                    <div class="home"><a class="home" href="../index.html">Home</a></div>
+        <nav class="navbar navbar-expand-lg navbar-light navColor">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse flex" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">Home</a>
                 </li>
-                <li>
-                    <div class="cursos"><a class="cursos" href="cursos.html">Cursos</a></div>
+                <li class="nav-item">
+                  <a class="nav-link active" href="cursos.html">Cursos</a>
                 </li>
-                <li>
-                    <div class="alma"><a class="alma" href="almalider.html">Alma Lider</a></div>
+                <li class="nav-item">
+                  <a class="nav-link" href="almalider.html">Alma Lider</a>
                 </li>
-                <li>
-                    <div class="mentoria"><a class="mentoria" href="mentorias.html">Mentorias</a></div>
+                <li class="nav-item">
+                  <a class="nav-link" href="mentorias.html">Mentorias</a>
                 </li>
-                <li>
-                    <div class="escuela"><a class="escuela" href="escuela.html">Escuela</a></div>
+                <li class="nav-item">
+                  <a class="nav-link" href="escuela.html">Escuela</a>
                 </li>
-            </ul>
-    </nav>
+              </ul>
+            </div>
+          </div>
+        </nav>
 
     <main>
         <h1 class="titulo">Cursos</h1>
