cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
             <div class="collapse navbar-collapse flex" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page"  href="./index.html">Home</a>
+                  <a class="nav-link Home active" aria-current="page"  href="./index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./section/cursos.html">Cursos</a>
+                  <a class="nav-link Cursos" href="./section/cursos.html">Cursos</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./section/almalider.html">Alma Lider</a>
+                  <a class="nav-link Alma" href="./section/almalider.html">Alma Lider</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link"href="./section/mentorias.html">Mentorias</a>
+                  <a class="nav-link Mentorias"href="./section/mentorias.html">Mentorias</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="./section/escuela.html">Escuela</a>
+                  <a class="nav-link Escuela" href="./section/escuela.html">Escuela</a>
                 </li>
               </ul>
             </div>
