--- a/index.html
+++ b/index.html
@@ -1,122 +1,117 @@
 <!DOCTYPE html>
-<html lang="es">
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VaniBrand</title>
-    <link rel="shortcut icon" href="./images/Vani.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/style.css">
-
+    <link rel="stylesheet" href="./estilos/style.css">
+    <title>Base de datos power</title>
 </head>
-<body>
+<body class="body">
 
-    <div class="estructuraHome">
+    <header>
 
-        <header class="header">
-            <picture >
-                <source media="(max-width:500px)" srcset="images/logo-mobile.png">
-                <source media="(max-width:1024px)" srcset="images/logo-tablet.png">
-                <img class="logo" src="./images/logo.png" alt="Logo">
-            </picture>
-            <picture>
-                <source media="(max-width: 500px)" srcset="images/vaniHome-mobile.png">
-                <source media="(max-width: 1024px)" srcset="images/vaniHome-tablet.png">
-                <img class="vaniHome" src="./images/vaniHome.png" >
-            </picture>
-        </header>
+      <div class="imagenesBarra container-fluid">
+        <picture class="vaniHome1">
+          <source media="(max-width: 500px )" srcset="images/vanihome-mobile.png">
+          <source media="(max-width:1024px)" srcset="images/vanihome-tablet.png">
+          <source media="(max-width:1800px)" srcset="images/vanihome.png">
+          <img class="vaniHome" src="./images/vaniHome.png" >
+        </picture>
+      </div>
 
-        <nav class="navbar navbar-expand-lg navbar-light navColor">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse flex" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link Home active" aria-current="page"  href="./index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link Cursos" href="./section/cursos.html">Cursos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link Alma" href="./section/almalider.html">Alma Lider</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link Mentorias"href="./section/mentorias.html">Mentorias</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link Escuela" href="./section/escuela.html">Escuela</a>
-                </li>
-              </ul>
+        <nav class="navbar navbar-expand-lg navbar-light violet">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"> <img src="./Images/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse text-center navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                  <a class="nav-link active" aria-current="page" href="#">Home</a>
+                  <a class="nav-link" href="./section/cursos.html">Cursos</a>
+                  <a class="nav-link" href="./section/almalider.html">Alma Lider</a>
+                  <a class="nav-link" href="./section/escuela.html">Escuela</a>
+                  <a class="nav-link" href="./section/mentoria.html">Mentorias</a>
+                </div>
+              </div>
+            </div>
+          </nav>
+
+    </header>
+    <section class="container-fluid">
+      <div class="divHome1">
+        <h1>Vani Brand</h1>
+        <h2>Mentora de negocios</h2>
+      </div>
+    </section>
+
+    <section class="sectionHome2 container">
+          <picture class="imagenInicio">
+            <source media="(max-width: 500px )" srcset="images/vanihome2-mobile.png">
+            <source media="(max-width:1024px)" srcset="images/vanihome2-tablet.png">
+            <source media="(max-width:1800px)" srcset="images/vanihome2.png">
+            <img class="imagenPresentacion" src="./images/vanihome2.png" alt="presentacionVaniBrand">
+        </picture>
+            <p class="intro">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vel deleniti optio assumenda architecto
+            ad. Optio error dolor, aliquid laudantium accusantium minus pariatur deleniti, cum facere eveniet
+            officia voluptatum ratione? texto donde se presenta...
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni vitae omnis possimus minima cumque quam,
+            error officiis, dolor libero amet nobis consectetur porro fugiat corrupti. Modi earum quaerat laboriosam
+            voluptatem?
+        </p>
+    </section>
+
+    <section>
+      <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./Images/baseDeDatosInicio-pc.png" class="rounded mx-auto d-block w-45" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>BASE DE DATOS</h5>
+              <p class="pIndex">LA MEJOR BASE DE DATOS DE TU VIDA PARA CREAR CAMPAÑAS DE E-MAIL CON MI CLASE INCLUIDA </p>
             </div>
           </div>
-        </nav>
-
-        <div class="divHome1">
-            <h1>Vani Brand</h1>
-            <h2 class="h2Home">Mentora de negocios</h2>
+          <div class="carousel-item">
+            <img src="./Images/empAEmp2Inicio-pc.png" class="rounded mx-auto d-block w-45" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>DE EMPRENDEDORA A EMPRESARIA</h5>
+              <p class="pIndex">Todo lo que tenés que saber para convertir tu negocio en un ingreso mensual de 6 cifras.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="./Images/llevaTuNegocioInicio-pc.png" class="rounded mx-auto d-block w-45" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>LLEVA TU NEGOCIO AL PROXIMO NIVEL</h5>
+              <p class="pIndex">Si te quedaste afuera del curso que hicieron más de 100 personas en Octubre. Esta es tú oportunidad.</p>
+            </div>
+          </div>
         </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 
-        <section class="sectionHome2">
-            <picture class="imagenInicio">
-                <source media="(max-width: 500px )" srcset="images/vanihome2-mobile.png">
-                <source media="(max-width:1024px)" srcset="images/vanihome2-tablet.png">
-                <source media="(max-width:1800px)" srcset="images/vanihome2.png">
-                <img class="imagenPresentacion" src="./images/vanihome2.png" alt="presentacionVaniBrand">
-            </picture>
-                <p class="intro">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vel deleniti optio assumenda architecto
-                ad. Optio error dolor, aliquid laudantium accusantium minus pariatur deleniti, cum facere eveniet
-                officia voluptatum ratione? texto donde se presenta...
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni vitae omnis possimus minima cumque quam,
-                error officiis, dolor libero amet nobis consectetur porro fugiat corrupti. Modi earum quaerat laboriosam
-                voluptatem?
-            </p>
-        </section>
+    </section>
 
-        <aside class="asideHome">
-            <div class="curso1">
-                <picture>
-                    <source media="(max-width: 500px )" srcset="images/baseDeDatosInicio-mobile.png">
-                    <source media="(max-width: 1024px )" srcset="images/baseDeDatosInicio-tablet.png">
-                    <source media="(max-width: 1024px )" srcset="images/baseDeDatosInicio.png">
-                    <img src="./images/baseDeDatosInicio.png" alt="Base de Datos">
-                </picture>
-                    <p>Base de Datos Power</p>
-                <button class="boton">COMPRAR</button>
-            </div>
-            <div class="curso2">
-                <picture>
-                    <source media="(max-width: 500px )" srcset="images/empAEmp2Inicio-mobile.png">
-                    <source media="(max-width: 1024px )" srcset="images/empAEmp2Inicio-tablet.png">
-                    <source media="(max-width: 1024px )" srcset="images/empAEmp2Inicio.png">
-                    <img src="./images/empAEmp2Inicio.png" alt="Emprendedora a Emoresaria II">
-                </picture>
-                    <p>Emprendedora a Emoresaria II</p>
-                <button class="boton">COMPRAR</button>
-            </div>
-            <div class="curso3">
-                <picture>
-                    <source media="(max-width: 500px )" srcset="images/llevaTuNegocioInicio-mobile.png">
-                    <source media="(max-width: 1024px )" srcset="images/llevaTuNegocioInicio-tablet.png">
-                    <source media="(max-width: 1024px )" srcset="images/llevaTuNegocioInicio.png">
-                    <img src="./images/llevaTuNegocioInicio.png" alt="Lleva Tu Negocio al Proximo Nivel">
-                </picture>
-                    <p>Lleva Tu Negocio Al Proximo Nivel</p>
-                <button class="boton">COMPRAR</button>
-            </div>
+  <footer>
 
-        </aside>
-        <footer id="pie">
-            <p>Todos los derechos reservados</p>
-        </footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    </div>
+    <p class="footer">Todos los derechos reservados VaniBrand (R) 2022</p>
 
+  </footer>
 
-
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
 </html>
