--- a/section/cursos.html
+++ b/section/cursos.html
@@ -1,91 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos</title>
-    <link rel="shortcut icon" href="../images/Vani.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../estilos/style.css">
+    <title>Cursos</title>
 </head>
+<body class="body">
 
-<body>
-    <div class="estruturaCursos">
-        <header class="header">
-            <picture >
-                <source media="(max-width:500px)" srcset="../images/logo-mobile.png">
-                <source media="(max-width:1024px)" srcset="../images/logo-tablet.png">
-                <img class="logo" src="../images/logo.png" alt="Logo">
-            </picture>
-            <picture>
-                <source media="(max-width:500px)" srcset="../images/vaniCursos-mobile.png">
-                <source media="(max-width:1024px)" srcset="../images/vaniCursos-tablet.png">
-                <img class="vaniCursos" src="../images/vaniCursos.png" >
-            </picture>
-        </header>
+    <header>
 
+      <div class="imagenesBarra">
+        <picture class="vaniHome1">
+            <source media="(max-width: 500px)" srcset="../images/vaniCursos-mobile.png">
+            <source media="(max-width: 1024px)" srcset="../images/vaniCursos-tablet.png">
+            <img class="vaniHome" src="../Images/vaniCursos.png" >
+        </picture>
+      </div>
 
-        <nav class="navbar navbar-expand-lg navbar-light navColor">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse flex" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
+        <nav class="navbar navbar-expand-lg navbar-light violet">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"> <img src="../Images/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse text-center navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
                   <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="cursos.html">Cursos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="almalider.html">Alma Lider</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="mentorias.html">Mentorias</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="escuela.html">Escuela</a>
-                </li>
-              </ul>
+                  <a class="nav-link active" href="#">Cursos</a>
+                  <a class="nav-link" href="../section/almalider.html">Alma Lider</a>
+                  <a class="nav-link" href="../section/escuela.html">Escuela</a>
+                  <a class="nav-link" href="../section/mentoria.html">Mentorias</a>
+                </div>
+              </div>
             </div>
-          </div>
-        </nav>
+          </nav>
 
-    <main>
-        <h1 class="titulo">Cursos</h1>
-    </main>
-    <section class="cursosTablas">
-        <!-- cursos en formato de tabla -->
-        <div class="empAEmpI">
-                <img class="imagenCursosTabla" src="../images/empEmpresaria1.png" alt="empaemp1">
-                <p class="textoCursosTabla">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet a, quibusdam dolorum perferendis at
-                accusantium illo, neque fugit recusandae nihil ratione non eius nostrum odit impedit tenetur ut.
-                Nulla, incidunt?</p>
-                <button class="botonComprar">COMPRAR</button>
-        </div>
-        <div class="empAEmpII">
-                <img class="imagenCursosTabla" src="../images/emprendEmpre2.png" alt="empaemp2">
-                <p class="textoCursosTabla">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet a, quibusdam dolorum perferendis at
-                accusantium illo, neque fugit recusandae nihil ratione non eius nostrum odit impedit tenetur ut.
-                Nulla, incidunt?</p>
-                    <button class="botonComprar">COMPRAR</button>
-        </div>
-        <div class="llevaTuNegocio">
-                <img src="../images/llevatunegocio.png" alt="llevatunegocio">
-                <p class="textoCursosTabla">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Amet a, quibusdam dolorum perferendis at
-                accusantium illo, neque fugit recusandae nihil ratione non eius nostrum odit impedit tenetur ut.
-                Nulla, incidunt?</p>
-                <button class="botonComprar">COMPRAR</button>
-        </div>
-    </section>
-    <footer id="pie">
-        <!-- pie de pagina -->
-        <p>Todos los derechos reservados</p>
-    </footer>
+    </header>
+
+    <div>
+        <h1>Cursos</h1>
     </div>
+
+    <main class="container-fluid">
+        <section class="row justify-content-center">
+          <div class="card1 m-2" style="width: 30rem;">
+            <img src="../Images/baseDeDatos.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">!!!BASE DE DATOS   POWER para vos!!!</h5>
+              <p class="card-text">LA MEJOR BASE DE DATOS DE TU VIDA PARA CREAR CAMPAÑAS DE E-MAIL CON MI CLASE INCLUIDA</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Grupo de soporte en FB</li>
+              <li class="list-group-item">Atención personalizada</li>
+              <li class="list-group-item">Soporte en línea</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Comprar</a>
+            </div>
+        </div>
+        <div class="card2 m-2" style="width: 30rem;">
+            <img src="../Images/empEmpresaria1.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">DE EMPRENDEDORA A EMPRESARIA</h5>
+              <p class="card-text">Todo lo que tenés que saber para convertir tu negocio en un ingreso mensual de 6 cifras</p>
+            </div>
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">Grupo de soporte en FB</li>
+              <li class="list-group-item">Atención personalizada</li>
+              <li class="list-group-item">Soporte en línea</li>
+            </ul>
+            <div class="card-body">
+              <a href="#" class="card-link">Comprar</a>
+            </div>
+        </div>
+        <div class="card3 m-2" style="width: 30rem;">
+          <img src="../Images/llevatunegocio.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">LLEVA TU NEGOCIO AL PROXIMO NIVEL</h5>
+            <p class="card-text">Si te quedaste afuera del curso que hicieron más de 100 personas en Octubre. Esta es tú oportunidad.</p>
+          </div>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">Grupo de soporte en FB</li>
+            <li class="list-group-item">Atención personalizada</li>
+            <li class="list-group-item">Soporte en línea</li>
+          </ul>
+          <div class="card-body">
+            <a href="#" class="card-link">Comprar</a>
+          </div>
+        </div>
+        </section>
+    </main>
+
+    <footer>
+
+      <p class="footer">Todos los derechos reservados VaniBrand (R) 2022</p>
+  
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
 </html>
