--- a/section/escuela.html
+++ b/section/escuela.html
@@ -1,101 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escuela</title>
-    <link rel="shortcut icon" href="../images/Vani.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../estilos/style.css">
+    <title>Escuela</title>
 </head>
+<body class="body">
 
-<body>
-    <div class="estructuraEscuela">
-        <header class="header">
-            <!-- encabezado/barra de navegacion -->
-                <picture>
-                    <source media="(max-width: 500px )" srcset="../images/logo-mobile.png">
-                    <source media="(max-width: 1024px )" srcset="../images/logo-tablet.png">
-                    <img src="../images/logo.png" alt="logo">
-                </picture>
-                <picture>
-                    <source media="(max-width: 500px )" srcset="../images/vaniEscuela-mobile.png">
-                    <source media="(max-width: 1024px )" srcset="../images/vaniEscuela-tablet.png">
-                    <img src="../images/vaniEscuela.png" alt="bannerescuela">
-                </picture>
-        </header>
-        
-        <nav class="navbar navbar-expand-lg navbar-light navColor">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse flex" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
+    <header>
+
+      <div class="imagenesBarra">
+        <picture class="vaniHome1">
+            <source media="(max-width: 500px)" srcset="../images/vaniEscuela-mobile.png">
+            <source media="(max-width: 1024px)" srcset="../images/vaniEscuela-tablet.png">
+            <img class="vaniHome" src="../Images/vaniEscuela.png" >
+        </picture>
+      </div>
+
+        <nav class="navbar navbar-expand-lg navbar-light violet">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#"> <img src="../Images/logo.png" alt=""></a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse text-center navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
                   <a class="nav-link" aria-current="page" href="../index.html">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="cursos.html">Cursos</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="almalider.html">Alma Lider</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="mentorias.html">Mentorias</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link  active" href="escuela.html">Escuela</a>
-                </li>
-              </ul>
+                  <a class="nav-link" href="../section/cursos.html">Cursos</a>
+                  <a class="nav-link" href="../section/almalider.html">Alma Lider</a>
+                  <a class="nav-link active" href="#">Escuela</a>
+                  <a class="nav-link" href="../section/mentoria.html">Mentorias</a>
+                </div>
+              </div>
             </div>
-          </div>
-        </nav>
+          </nav>
 
-            <div class="titulo">
-            <h1>Escuela</h1>
-            </div>
-            <article class="formularioEscuela">
-                <form class="formularioEscuelas">
-                    <!-- formulario para inscribirse a la escuela -->
-                    <label class="dato1" for="nombre_apellido">Nombre y Apellido:
-                        <input type="text" placeholder="Datos personales" name="Nombre y Apellido"><br>
-                    </label>
-                    <label for="email">Email:
-                        <input type="email" placeholder="aaa@bbb.com" name="email"><br>
-                    </label>
-                    <label for="Telefono">Telefono:
-                        <input type="tel" placeholder="(---)(----------)" name="Telefono"><br>
-                    </label>
-                    <p>Ya hiciste alguno de nuestros cursos?</p>
-                    <label for="sí">Sí</label>
-                    <input type="checkbox" name="si" value="1">
-                    <label for="no">No</label>
-                    <input type="checkbox" name="no" value="1">
-                    <p>Qué curso hiciste?</p>
-                    <select name="curso" id="curso">
-                        <option value="Ninguno">Ninguno</option>
-                        <option value="emprendedora a empresaria 1">emprendedora a empresaria 1</option>
-                        <option value="emprendedora a empresaria 2">emprendedora a empresaria 2</option>
-                        <option value="lleva tu negocio al próximo nivel">lleva tu negocio al próximo nivel</option>
-                    </select>
-                    <br>
-                    <br>
-                    <label for="Comentarios">Comentarios:<br>
-                        <textarea placeholder="Comentarios"></textarea>
-                    </label>
-                    <br>
-                    <br>
-                    <input class="boton" type="submit" value="REGISTRARSE">
-                </form>
-            </article>
-    <footer id="pie">
-        <!-- pie de pagina -->
-        <p>Todos los derechos reservados</p>
-    </footer>
+    </header>
+
+    <div>
+        <h1>Escuela</h1>
     </div>
+
+    <form class="row g-3 needs-validation" novalidate>
+      <div class="col-md-4">
+        <label for="validationCustom01" class="form-label">Nombre</label>
+        <input type="text" class="form-control" id="validationCustom01" value="Vani" required>
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+      </div>
+      <div class="col-md-4">
+        <label for="validationCustom02" class="form-label">Apellido</label>
+        <input type="text" class="form-control" id="validationCustom02" value="Brand" required>
+        <div class="valid-feedback">
+          Looks good!
+        </div>
+      </div>
+      <div class="col-md-4">
+        <label for="validationCustomUsername" class="form-label">Instagram</label>
+        <div class="input-group has-validation">
+          <span class="input-group-text" id="inputGroupPrepend">@</span>
+          <input type="text" class="form-control" id="validationCustomUsername" aria-describedby="inputGroupPrepend" required>
+          <div class="invalid-feedback">
+            Please choose a username.
+          </div>
+        </div>
+      </div>
+      <div class="col-md-6">
+        <label for="validationCustom03" class="form-label">Provincia</label>
+        <input type="text" class="form-control" id="validationCustom03" required>
+        <div class="invalid-feedback">
+          Por favor elija una provincia valida.
+        </div>
+      </div>
+      <div class="col-md-3">
+        <label for="validationCustom04" class="form-label">Ciudad</label>
+        <select class="form-select" id="validationCustom04" required>
+          <option selected disabled value="">Choose...</option>
+          <option>...</option>
+        </select>
+        <div class="invalid-feedback">
+          Por favor elija una ciudad valida.
+        </div>
+      </div>
+      <div class="col-md-3">
+        <label for="validationCustom05" class="form-label">C.P.</label>
+        <input type="text" class="form-control" id="validationCustom05" required>
+        <div class="invalid-feedback">
+          Por favor introduce un codigo postal valido.
+        </div>
+      </div>
+      <div class="col-12">
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+          <label class="form-check-label" for="invalidCheck">
+              Acepto los terminos y condiciones.
+          </label>
+          <div class="invalid-feedback">
+              Debes aceptar los terminos y condiciones.
+          </div>
+        </div>
+      </div>
+      <div class="col-12">
+        <button class="btn btn-primary" type="submit">Enviar formulario</button>
+      </div>
+    </form>
+
+    <footer>
+
+      <p class="footer">Todos los derechos reservados VaniBrand (R) 2022</p>
+  
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
-
 </html>
