cambio de lorem a texto real

--- a/index.html
+++ b/index.html
@@ -56,13 +56,15 @@
             <img class="imagenPresentacion" src="./images/vanihome2.png" alt="presentacionVaniBrand">
         </picture>
             <p class="intro">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi vel deleniti optio assumenda architecto
-            ad. Optio error dolor, aliquid laudantium accusantium minus pariatur deleniti, cum facere eveniet
-            officia voluptatum ratione? texto donde se presenta...
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magni vitae omnis possimus minima cumque quam,
-            error officiis, dolor libero amet nobis consectetur porro fugiat corrupti. Modi earum quaerat laboriosam
-            voluptatem?
-        </p>
+              ✨Vanina encontró en la comunicación un camino hacia su propósito.
+              Lleva en sus palabras motivación y energía, una gran capacidad de escucha, practicidad y empatía frente a las adversidades.
+              <br>
+              <br>
+              💫Experta en ventas, desarrolla procesos efectivos para lograr cierres estratégicos, fidelización y retención de clientes.
+              <br>
+              <br>
+              🌟Es especialista en Multinivel, creación y liderazgo de equipos.
+            </p>
     </section>
 
     <section>
